--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-02.cleardb.net:3306/heroku_97b4c8b676fc581
-spring.datasource.username=bf3b21a1a78dc7
-spring.datasource.password=1ea099f2ae7961a
+spring.datasource.url=jdbc:mysql://localhost:3306/tts_db_project
+spring.datasource.username=root
+spring.datasource.password=password
